Fix profile image path in ProfileCard.css

--- a/src/components/ProfileCard.css
+++ b/src/components/ProfileCard.css
@@ -128,7 +128,7 @@
 
 .pc-card:hover, .pc-card.active {
   background: transparent !important;
-  background-image: url('/profile.jpg.jpg') !important;
+  background-image: url('/New_Profile.jpg.png') !important;
   background-size: cover;
   background-position: center;
   filter: none;
